# vero-audit-guard

./: .gitignore  BUILD_GUARD.sh  FUZZING_SUITE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  POLICY_AS_CODE.md  PR_SUBMISSION.md  README.md  SECURITY_ENHANCEMENT_SUMMARY.md  TODO.md  VERIFICATION_CHECKLIST.md  package-lock.json
.github/workflows/: fuzzing.yml  mutation-fuzzing.yml  policy-compliance.yml  security-scan.yml
anomaly-detector/: package-lock.json
anomaly-detector/src/: index.test.ts  index.ts  nonce-db.json  rpc-failover-monitor.test.ts  rpc-failover-monitor.ts
anomaly-detector/src/audit-guard/: threat-feed-fetcher.test.ts  threat-feed-fetcher.ts
engine-bridge/: package-lock.json
engine-bridge/src/: event-propagator.ts  index.ts  zk-state-syncer.ts
engine-core/src/: audit.rs  burn.rs  circuit_breaker.rs  governance.rs  governance_tests.rs  lib.rs  treasury.rs  types.rs
engine-core/test_snapshots/audit/tests/: replay_is_rejected.1.json  valid_first_commitment.1.json
engine-core/test_snapshots/circuit_breaker/tests/: trip_and_reset.1.json
reports/: fv-report.md  weekly_metrics.md
scanner-engine/: Cargo.toml
scanner-engine/fuzz/: Cargo.toml
scanner-engine/fuzz/fuzz_targets/: fuzz_rule_regex.rs  fuzz_scan_file.rs  fuzz_sha256.rs
scanner-engine/src/: lib.rs  main.rs
src/audit-guard/: ARCHIVE.md  Cargo.toml  FORMAL_VERIFICATION.md  FUZZING_IMPLEMENTATION.md  FUZZING_QUICK_START.md  README.md  SECURITY_PROTOCOLS.md  generate-badge.cjs  jest.config.js  package-lock.json  package.json  report_synthesizer.py  run_all_fuzz.sh  test-results-utf8.txt  test-results.txt  tsconfig.json  visualizer.py
src/audit-guard/examples/: compliant-pr.json  non-compliant-pr.json  pr-data.ts
src/audit-guard/fuzz/: .gitignore  Cargo.toml  README.md
src/audit-guard/fuzz/fuzz_targets/: fuzz_all_operations.rs  fuzz_compound_interest.rs  fuzz_safe_add.rs  fuzz_safe_average.rs  fuzz_safe_div.rs  fuzz_safe_mod.rs  fuzz_safe_mul.rs  fuzz_safe_mul_add.rs  fuzz_safe_percentage.rs  fuzz_safe_pow.rs  fuzz_safe_scale.rs  fuzz_safe_sub.rs
src/audit-guard/policies/: crypto.rego  dependencies.rego  lib.rego  logic_errors.rego  pr_compliance.rego  rbac.rego  relayer_authz.rego
src/audit-guard/reports/: latest-scan.json
src/audit-guard/scripts/: extract-pr-data.js  generate-fv-report.py
src/audit-guard/src/: abstract-interpreter.ts  archive-cli.ts  archiver.ts  audit-trail.test.ts  audit-trail.ts  backup.test.ts  backup.ts  bounty.ts  cli.ts  config.ts  crypto-patterns.ts  crypto-scanner.test.ts  crypto-scanner.ts  dashboard-client.test.ts  dashboard-client.ts  diff-engine.test.ts  diff-engine.ts  errors.ts  event-log-scanner.test.ts  event-log-scanner.ts  fuzzer.test.ts  gas-profiler.test.ts  gas-profiler.ts  index.ts  input-sanitization-monitor.test.ts  input-sanitization-monitor.ts  ip-tracker.test.ts  ip-tracker.ts  irps.ts  lib.rs  log-analyzer.test.ts  log-analyzer.ts  logic-detector.test.ts  logic-detector.ts  logic-patterns.ts  main.rs  math.rs  oncall-roster.test.ts  oncall-roster.ts  overflow-checker.ts  (+23 more)
src/audit-guard/src/audit-guard/assets/: security-badge.json
src/audit-guard/src/ui/: BountyForm.css  BountyForm.tsx  BreakerButton.css  BreakerButton.tsx
src/audit-guard/test_snapshots/test/: test_formal_verification.1.json  test_verify_security_protocol.1.json
src/audit-guard/tests/: math_integration_tests.rs
verifiable-audit-trail/: package-lock.json
verifiable-audit-trail/src/: incident-logger.test.ts  incident-logger.ts  index.ts
