[package]
name = "audit-guard"
version = "0.1.0"
edition = "2021"
description = "Automated development task for the vero-audit-guard module. Standardizing security protocols and improving system resilience against vulnerabilities."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
