[package]
name = "vero-audit-guard"
version = "0.1.0"
edition = "2021"
description = "Vero Protocol Audit Guard - Standardizing security protocols and improving system resilience"

[dependencies]
# Standard dependencies for Rust safety and API integration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
