[package]
name = "audit-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
arbitrary = { version = "1.3", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "audit-guard-cli"
path = "src/lib.rs"
